4-ingress-kibana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: kibana
  namespace: elastic-system
spec:
  ingressClassName: nginx
  rules:
  - host: kibana.my.laptop
    http:
      paths:
      - backend:
          service:
            name: quickstart-kb-http
            port:
              number: 5601
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - kibana.my.laptop
    secretName: kibana-my-laptop-tls
